implemented automated email sending feature with custom html body and file attachement, improved some logical and ui stuffs

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>${itext.version}</version>
         </dependency>
 
+        <!-- Email  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
